# Hackathon-physical-ai-humanoid-robotics

./: .gitignore  README.md  TRANSLATION_TOGGLE_SETUP.md  docusaurus.config.js  package-lock.json  sidebars.js  vercel.json
backend/: .env.example  Dockerfile  README.md  config.py  debug_search.py  main.py  pyproject.toml  rag_chatbot.py  rag_chatbot_readme.md  requirements.txt  reset_qdrant.py  start_api.bat  start_api.sh  test_api.py  test_embeddings.py
backend/api/: main.py
backend/book_embeddings_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/database/: neon_logger.py
backend/utils/: chunker.py  embedder.py  logger.py  qdrant_storage.py  text_extractor.py  url_manager.py  validator.py
blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  tags.yml
blog/2021-08-26-welcome/: index.md
docs/: educator-resources.md  intro.md  maintainer-guide.md  modules.md  research-articles.md
docs/modules/: module-1-ros2.md  module-2-digital-twin.md  module-3-ai-robot-brain.md  module-4-vla.md
docs/physical-ai-humanoid-robotics/chapter-1/: lesson-1-1-foundations-of-physical-ai.md  lesson-1-2-anatomy-of-humanoid-robots.md  lesson-1-3-simulation-environments.md
docs/physical-ai-humanoid-robotics/chapter-2/: lesson-2-1-perception-systems.md  lesson-2-2-motion-planning.md  (+1 more)
specs/003-chatbot-frontend/: spec.md  tasks.md
specs/1-book-embeddings-pipeline/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
src/pages/: index.js
src/theme/: Layout.js  Root.js
(+30 files in other folders)
